# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inui"
version = "0.1.2"
description = "Powerful and Highly Customizable Python Library for UI"
readme = "README.md"
authors = [{ name = "Mohammadreza Amani", email = "more.amani@yahoo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["framework", "ui", "frontend","engine"]
dependencies = [
    "beautifulsoup4"
]
requires-python = ">=3.5"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/MohammadrezaAmani/"

[tool.setuptools]
py-modules = ['inui']